--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,14 @@ main .title h1 {
 main .title p {
   font-size: 18px;
 }
+main table thead td {
+  color: #B9C0D1;
+  font-size: 18px;
+}
+main table tbody td {
+  padding-block: 8px;
+  font-size: 18px;
+}
 main .my_wallets {
   display: flex;
   flex-direction: column;
@@ -132,4 +140,8 @@ main .transactions a {
   border: 0;
   font-size: 16px;
   color: white;
+}
+
+.currency {
+  text-transform: uppercase;
 }
