--- a/add_wallets/add_wallets.scss
+++ b/add_wallets/add_wallets.scss
@@ -30,7 +30,8 @@
       font-size: 48px;
       font-weight: 700;
     }
-    input {
+    input, select {
+      width: 378px;
       height: 46px;
       font-size: 20px;
       padding-left: 8px;
@@ -49,6 +50,7 @@
   }
 }
 .submit_btn {
+  width: 378px;
   height: 46px;
   background: #0047ff;
   color: #fff;
@@ -56,23 +58,19 @@
   font-size: 20px;
   border-radius: 8px;
 }
-.delete_btn {
-  height: 46px;
-  background: #e70000;
-  color: #fff;
-  border: 0;
-  font-size: 20px;
-  border-radius: 8px;
-}
-.show{
+.show {
   display: block !important;
 }
-.hide{
+.hide {
   display: none !important;
 }
 .fade {
   animation-name: fade;
   animation-duration: 0.5s;
+}
+
+.currency {
+  text-transform: uppercase;
 }
 
 @keyframes fade {
